--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,6 @@
     <title>Random Quote Generator</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="quote-box"></div>
   </body>
 </html>
